--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -1,40 +1,69 @@
 <!DOCTYPE html>
-<html>
+<!--
+ * Copyright (c) 2022 All Rights Reserved
+ * Title: Time Travel Trading
+ * Authors: Scott Zastrow, Nichole Davidson, Alexander Bennett
+//-->
+<html lang="en">
 <head>
-    <script type="text/javascript" src="examplePage.js"></script>
+    <meta charset="UTF-8">
+    <title>Time Travel Trading</title>
+    <meta name="author" content="Jiffy Labs Inc.">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"><!--Sets mobile resolution-->
+    <script type="text/javascript" src="mainpage.js"></script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/menu.css">
+    <link rel="stylesheet" type="text/css" href="css/content.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
-<body class="background">
-    <header class="header" id="header">
-        <div class="site-title">
-            <a class="header_home" href="index.html">Time Travel Trading</a>
-        </div>
+<body >
+    <header class="header">
+        <div class="sitelogo"></div>
+        <div class="companyname"></div>
+        <div id="menuwrap">
+            <div id="menu">
+                <ul>
+                    <li>
+                        <a href="index.html">Main</a>
+                    </li>
+                    <li>
+                        <a href="portal.html">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">Contact Us</a>
+                    </li>
+
+            </div><!--menu-->
+        </div><!--menuwrap-->
     </header>
-    <div class="card">
-        <h2>Create Example</h2>
-        <form class="card-content" id="create-form">
-            <p class="form-field">
-                <label>Name</label>
-                <input type="text" required class="validated-field" id="create-name-field">
-            </p>
-            <button type="submit">Create</button>
-        </form>
+    <div class="contentbody">
+        <div class="content">
+            <div class="divider"></div>
+            <div class="overflowcontent">
+                <!--content area-->
+            </div>
+        </div>
     </div>
-    <div class="card">
-        <h2>Get By ID</h2>
-        <form class="card-content" id="get-by-id-form">
-            <p class="form-field">
-                <label>ID</label>
-                <input type="text" required class="validated-field" id="id-field">
-            </p>
-            <button type="submit">Get</button>
-        </form>
+<footer class="footer">
+    <div class="divider"></div>
+    <div class="footlogo">
+        <div class="secondlogo"></div>
+        <div class="secondname"></div>
     </div>
-    <div class="card" id="result">
-        <h2>Result:</h2>
-        <p id="result-info"></p>
+    <div CLASS="product">
+        <h3>A PRODUCT BY</h3>
+        <P>Jiffy Labs Inc.<br>Franse Akker 9<br>3823 AL Breda<br>The Netherlands</P>
     </div>
 
+    <div class="sitemap">
+        <h3>MENU</h3>
+        <P><a href="index.html">Main</a><br><a href="portal.html">Portfolio</a><br><a href="about.html">About</a><br><a href="contact.html">Contact Us</a></P>
+    </div>
+    <div class="copyright">Copyright &#169; 2022 All Rights Reserved.</div>
+</footer>
+<div class="remainder"></div>
 </body>
 </html>
