--- a/Frontend/src/checkout.html
+++ b/Frontend/src/checkout.html
@@ -44,7 +44,13 @@
     <div class="divider"></div>
     <div class="overflowcontent">
       <!--content area-->
-
+      <div class="buy">
+      <div id="purchase"></div>
+        <form>
+          <br>
+        <button type="submit">BUY</button>
+        </form>
+      </div>
       <!--content area-->
     </div>
   </div>
