--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -47,7 +47,7 @@
                 <!--content area-->
                 <div style="margin: 20px; height:450px">
                 <form id="formid">
-                    Search Stock:<input name="name" type="text" value="" size="30" id="searchstock"/><button type="submit">Search</button></br></br>
+                    Search Stock:<input name="name" style="margin-left: 5px;" type="text" value="" size="30" id="searchstock"/><button type="submit" style="margin-left: 5px;" >Search</button></br></br>
                 </form>
                     <div id="stockresults"></div>
                 </div>
