--- a/Frontend/src/checkout.html
+++ b/Frontend/src/checkout.html
@@ -42,17 +42,21 @@
 <div class="contentbody">
   <div class="content">
     <div class="divider"></div>
-    <div class="overflowcontent">
       <!--content area-->
       <div class="buy">
-      <div id="purchase"></div>
+        <div class="overflowcontent">
         <form>
+        <div class="qty">
+          Quantity: <input name="name" type="text" value="1" size="5" id="quantity" style="margin-top: 5px;"/>
+          <input type="submit" value="Update" style="margin-top: 5px;" id="update"/>
+        </div>
+      <div id="purchase"></div>
           <br>
-        <button type="submit">BUY</button>
+          <input type="submit" value="BUY"/>
         </form>
+        </div>
       </div>
       <!--content area-->
-    </div>
   </div>
 </div>
 <footer class="footer">
