Created portalClient.js, stubbed out checkoutpage.js and portalpage.js.

--- a/Frontend/src/checkout.html
+++ b/Frontend/src/checkout.html
@@ -52,7 +52,7 @@
         </div>
       <div id="purchase"></div>
           <br>
-          <input type="submit" value="BUY"/>
+          <input type="submit" value="BUY" id="buy"/>
         </form>
         </div>
       </div>
