--- a/Frontend/src/checkout.html
+++ b/Frontend/src/checkout.html
@@ -42,21 +42,21 @@
 <div class="contentbody">
   <div class="content">
     <div class="divider"></div>
-      <!--content area-->
-      <div class="buy">
-        <div class="overflowcontent">
+    <!--content area-->
+    <div class="buy">
+      <div class="overflowcontent">
         <form>
-        <div class="qty">
-          Quantity: <input name="name" type="text" value="1" size="5" id="quantity" style="margin-top: 5px;"/>
-          <input type="submit" value="Update" style="margin-top: 5px;" id="update"/>
-        </div>
-      <div id="purchase"></div>
+          <div class="qty">
+            Quantity: <input name="name" type="text" value="1" size="5" id="quantity" style="margin-top: 5px;"/>
+            <a href="#" id="update">Update</a>
+          </div>
+          <div id="purchase"></div>
           <br>
-          <input type="submit" value="BUY" id="buy"/>
+          <a href="#" id="buy">BUY</a>
         </form>
-        </div>
       </div>
-      <!--content area-->
+    </div>
+    <!--content area-->
   </div>
 </div>
 <footer class="footer">
