--- a/Frontend/src/checkout.html
+++ b/Frontend/src/checkout.html
@@ -48,7 +48,7 @@
         <form>
           <div class="qty">
             Quantity: <input name="name" type="text" value="1" size="5" id="quantity" style="margin-top: 5px;"/>
-            <a href="#" id="update">Update</a>
+            <div style="margin-top: 10px"><a href="#" id="update">Update</a></div>
           </div>
           <div id="purchase"></div>
           <br>
