--- a/Frontend/src/portal.html
+++ b/Frontend/src/portal.html
@@ -44,6 +44,13 @@
   <div class="content">
     <div class="divider"></div>
     <div class="overflowcontent">
+        <div class="contenttitle">
+            <h2>Portfolio</h2>
+          <form id="re-fresh">
+          <input type="submit" value="Refresh">
+          </form>
+          <div id="results-area"></div>
+        </div>
       <!--content area-->
     </div>
   </div>
