--- a/Frontend/src/checkout.html
+++ b/Frontend/src/checkout.html
@@ -43,7 +43,7 @@
   <div class="content">
     <div class="divider"></div>
     <!--content area-->
-    <div class="buy">
+    <div class="holdings">
       <div class="overflowcontent">
         <form>
           <div class="qty">
@@ -52,7 +52,7 @@
           </div>
           <div id="purchase"></div>
           <br>
-          <a href="#" id="buy">BUY</a>
+          <a href="portal.html" id="buy">BUY</a> | <a href="portal.html" id="mock">LIE</a>
         </form>
       </div>
     </div>
