--- a/Frontend/src/portal.html
+++ b/Frontend/src/portal.html
@@ -40,15 +40,35 @@
   </div><!--menuwrap-->
 </header>
 <div class="contentbody">
-  <!--Change class from temp to content when ready!!!!!!!-->
   <div class="content">
     <div class="divider"></div>
     <div class="overflowcontent">
         <div class="contenttitle">
-            <h2>Portfolio</h2>
-          <form id="re-fresh">
+          <div class="holdings">
+            <div class="overflowcontent">
+              <div><h3>Portfolio Holdings</h3></div>
+                <!--portfolio area-->
+                <div class="column">Stocks</div>
+                <div class="column">
+                  <div class="section" style="text-align: center">Symbol</div>
+                  <div class="section" style="text-align: center">Qty</div>
+                  <div class="section" style="text-align: center">Price</div>
+                  <div class="section" style="text-align: center">Cost</div>
+                  <div class="section" style="text-align: center">Mkt value</div>
+                  <div id="stocklist">
+                    <!--portfolio area-->
+                  </div>
+                  <div class="section">GOOGL</div>
+                  <div class="section">10</div>
+                  <div class="section">98.57</div>
+                  <div class="section">1,218.33</div>
+                  <div class="section">1,139.30</div>
+              </div>
+            </div>
+          </div>
+          <!--<form id="re-fresh">
           <input type="submit" value="Refresh">
-          </form>
+          </form>-->
           <div id="results-area"></div>
         </div>
       <!--content area-->
