--- a/Frontend/src/portal.html
+++ b/Frontend/src/portal.html
@@ -63,6 +63,7 @@
                   <div class="section">98.57</div>
                   <div class="section">1,218.33</div>
                   <div class="section">1,139.30</div>
+                  <div class="portend"></div>
               </div>
             </div>
           </div>
