--- a/Frontend/src/portal.html
+++ b/Frontend/src/portal.html
@@ -54,7 +54,7 @@
                   <div class="section" style="text-align: center">Qty</div>
                   <div class="section" style="text-align: center">Price</div>
                   <div class="section" style="text-align: center">Cost</div>
-                  <div class="section" style="text-align: center">Mkt value</div>
+                  <div class="section" style="text-align: center">Date</div>
                   <div id="stocklist">
                     <!--portfolio area-->
                   </div>
