--- a/Frontend/src/portal.html
+++ b/Frontend/src/portal.html
@@ -57,13 +57,28 @@
                   <div class="section" style="text-align: center">Date</div>
                   <div id="stocklist">
                     <!--portfolio area-->
+
                   </div>
                   <div class="section">GOOGL</div>
-                  <div class="section">10</div>
+                  <div class="section">5</div>
                   <div class="section">98.57</div>
                   <div class="section">1,218.33</div>
-                  <div class="section">1,139.30</div>
-                  <div class="portend"></div>
+                  <div class="section">10/6/2021</div>
+                  <div class="section">TGT</div>
+                  <div class="section">30</div>
+                  <div class="section">153.1</div>
+                  <div class="section">4910.07</div>
+                  <div class="section">7/6/2020</div>
+                  <div class="section">V</div>
+                  <div class="section">20</div>
+                  <div class="section">202.33</div>
+                  <div class="section">4046.60</div>
+                  <div class="section">8/28/2022</div>
+                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
+                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
+                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
+                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
+                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
               </div>
             </div>
           </div>
