--- a/Frontend/src/portal.html
+++ b/Frontend/src/portal.html
@@ -48,6 +48,7 @@
             <div class="overflowcontent">
               <div><h3>Portfolio Holdings</h3></div>
                 <!--portfolio area-->
+              <form id="re-fresh"><input type="submit"></form>
                 <div class="column">Stocks</div>
                 <div class="column">
                   <div class="section" style="text-align: center">Symbol</div>
@@ -58,21 +59,21 @@
                   <div id="stocklist">
                     <!--portfolio area-->
                   </div>
-                  <div class="section">GOOGL</div>
-                  <div class="section">5</div>
-                  <div class="section">98.57</div>
-                  <div class="section">1,218.33</div>
-                  <div class="section">10/6/2021</div>
-                  <div class="section">TGT</div>
-                  <div class="section">30</div>
-                  <div class="section">153.1</div>
-                  <div class="section">4910.07</div>
-                  <div class="section">7/6/2020</div>
-                  <div class="section">V</div>
-                  <div class="section">20</div>
-                  <div class="section">202.33</div>
-                  <div class="section">4046.60</div>
-                  <div class="section">8/28/2022</div>
+                  <div class="section" id="cellA1"></div>
+                  <div class="section" id="cellA2"></div>
+                  <div class="section" id="cellA3"></div>
+                  <div class="section" id="cellA4"></div>
+                  <div class="section" id="cellA5"></div>
+                  <div class="section" id="cellB1"></div>
+                  <div class="section" id="cellB2"></div>
+                  <div class="section" id="cellB3"></div>
+                  <div class="section" id="cellB4"></div>
+                  <div class="section" id="cellB5"></div>
+                  <div class="section" id="cellC1"></div>
+                  <div class="section" id="cellC2"></div>
+                  <div class="section" id="cellC3"></div>
+                  <div class="section" id="cellC4"></div>
+                  <div class="section" id="cellC5"></div>
                   <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
                   <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
                   <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
