--- a/Frontend/src/checkout.html
+++ b/Frontend/src/checkout.html
@@ -52,7 +52,7 @@
           </div>
           <div id="purchase"></div>
           <br>
-          <a href="portal.html" id="buy">BUY</a> | <a href="portal.html" id="mock">LIE</a>
+          <a href="portal.html" id="buy">BUY</a>
         </form>
       </div>
     </div>
