--- a/Frontend/src/portal.html
+++ b/Frontend/src/portal.html
@@ -48,37 +48,36 @@
             <div class="overflowcontent">
               <div><h3>Portfolio Holdings</h3></div>
                 <!--portfolio area-->
-              <form id="re-fresh"><input type="submit"></form>
                 <div class="column">Stocks</div>
                 <div class="column">
-                  <div class="section" style="text-align: center">Symbol</div>
-                  <div class="section" style="text-align: center">Qty</div>
-                  <div class="section" style="text-align: center">Price</div>
-                  <div class="section" style="text-align: center">Cost</div>
-                  <div class="section" style="text-align: center">Date</div>
+<!--                  <div class="section" style="text-align: center">Symbol</div>-->
+<!--                  <div class="section" style="text-align: center">Qty</div>-->
+<!--                  <div class="section" style="text-align: center">Price</div>-->
+<!--                  <div class="section" style="text-align: center">Cost</div>-->
+<!--                  <div class="section" style="text-align: center">Date</div>-->
                   <div id="stocklist">
                     <!--portfolio area-->
                   </div>
-                  <div class="section" id="cellA1"></div>
-                  <div class="section" id="cellA2"></div>
-                  <div class="section" id="cellA3"></div>
-                  <div class="section" id="cellA4"></div>
-                  <div class="section" id="cellA5"></div>
-                  <div class="section" id="cellB1"></div>
-                  <div class="section" id="cellB2"></div>
-                  <div class="section" id="cellB3"></div>
-                  <div class="section" id="cellB4"></div>
-                  <div class="section" id="cellB5"></div>
-                  <div class="section" id="cellC1"></div>
-                  <div class="section" id="cellC2"></div>
-                  <div class="section" id="cellC3"></div>
-                  <div class="section" id="cellC4"></div>
-                  <div class="section" id="cellC5"></div>
-                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
-                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
-                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
-                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
-                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>
+<!--                  <div class="section" id="cellA1"></div>-->
+<!--                  <div class="section" id="cellA2"></div>-->
+<!--                  <div class="section" id="cellA3"></div>-->
+<!--                  <div class="section" id="cellA4"></div>-->
+<!--                  <div class="section" id="cellA5"></div>-->
+<!--                  <div class="section" id="cellB1"></div>-->
+<!--                  <div class="section" id="cellB2"></div>-->
+<!--                  <div class="section" id="cellB3"></div>-->
+<!--                  <div class="section" id="cellB4"></div>-->
+<!--                  <div class="section" id="cellB5"></div>-->
+<!--                  <div class="section" id="cellC1"></div>-->
+<!--                  <div class="section" id="cellC2"></div>-->
+<!--                  <div class="section" id="cellC3"></div>-->
+<!--                  <div class="section" id="cellC4"></div>-->
+<!--                  <div class="section" id="cellC5"></div>-->
+                  <div class="section"></div>
+<!--                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>-->
+<!--                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>-->
+<!--                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>-->
+<!--                  <div class="section" style="background-color: #D3D3D3; height: 3px;"></div>-->
               </div>
             </div>
           </div>
